syntax = "proto3";
package raptorboost;

service RaptorBoost {
  rpc GetVersion (GetVersionRequest) returns (GetVersionResponse);
  rpc UploadFiles (UploadFilesRequest) returns (UploadFilesResponse);
  rpc SendFileData (stream FileData) returns (SendFileDataResponse);
  rpc AssignNames (AssignNamesRequest) returns (AssignNamesResponse);
}

message GetVersionRequest {}

message GetVersionResponse {
  string version = 1;
}

message UploadFilesRequest {
  repeated string sha256sums = 1;
}

enum FileStateResult {
  FILESTATERESULT_UNSPECIFIED = 0;
  FILESTATERESULT_NEED_MORE_DATA = 1;
  FILESTATERESULT_COMPLETE = 2;
}

message FileState {
  string sha256sum = 1;
  FileStateResult state = 2;
  optional uint64 offset = 3;
}

message UploadFilesResponse {
  repeated FileState file_states = 1;
}

message FileData {
  bytes data = 1;
  bool first = 2;
  bool last = 3;
  optional string sha256sum = 4;
  optional bool force = 5;
}

enum SendFileDataStatus {
  SENDFILEDATASTATUS_UNSPECIFIED = 0;
  SENDFILEDATASTATUS_COMPLETE = 1;
  SENDFILEDATASTATUS_ERROR_CHECKSUM = 2;
}

message SendFileDataResponse {
  SendFileDataStatus status = 1;
}

message Sha256Filenames {
  string sha256sum = 1;
  repeated string names = 2;
}

message AssignNamesRequest {
  optional string name = 1;
  optional bool force = 2;
  repeated Sha256Filenames sha256_to_filenames = 3;
}

enum AssignNameStatus {
  ASSIGNNAMESTATUS_UNSPECIFIED = 0;
  ASSIGNNAMESTATUS_SUCCESS = 1;
  ASSIGNNAMESTATUS_ALREADY_EXISTS = 2;
}

message NameStatus {
  string name = 1;
  AssignNameStatus status = 2;
}

message AssignNamesResponse {
  repeated NameStatus statuses = 1;
}
